--- a/Support.html
+++ b/Support.html
@@ -14,11 +14,10 @@
         </p>
         <r/>
         <p>
-        "AI Guide Dog" is a  local notebook that does not record your personal data remotely. In other words, no one can get your data!!
+        "AI Guide Dog" is a tool that helps disable people to see the world!
         </p>
         <p>
-        The App supports common text editing formats:
-        font size, boldface, underline, font color, symbol list, inserting pictures, etc.
+        
         </p>
         <p>
         UI Design: Simple and beautiful design, comfortable user experience.
