--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -12,20 +12,9 @@
                   WXY and is intended for use as
                   is.
                 </p> <p>
-                  This page is used to inform visitors regarding my
-                  policies with the collection, use, and disclosure of Personal
-                  Information if anyone decided to use my Service.
+                  We have drawn up this Privacy Policy to inform you about our data processing. We process privacy-sensitive data in the context of our services. We attach great importance to careful handling of this data and do everything we can to process your personal data carefully, securely and confidentially.
                 </p> <p>
-                  If you choose to use my Service, then you agree to
-                  the collection and use of information in relation to this
-                  policy. The Personal Information that I collect is
-                  used for providing and improving the Service. I will not use or share your information with
-                  anyone except as described in this Privacy Policy.
-                </p> <p>
-                  The terms used in this Privacy Policy have the same meanings
-                  as in our Terms and Conditions, which are accessible at
-                  AI Guide Dog unless otherwise defined in this Privacy Policy.
-                </p> <p><strong>Information Collection and Use</strong></p> <p>
+                    <strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
                   identifiable information, including but not limited to WXY . The information that
