--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -35,7 +35,11 @@
                   commonly used as anonymous unique identifiers. These are sent
                   to your browser from the websites that you visit and are
                   stored on your device's internal memory.
-                </p> <p>
+                </p> <p><strong>Camera</strong></p> <p>
+                    Use of front（TrueDepth API）and rear cameras:
+                    Is for the purpose of measuring the distance of obstacles.
+                    We will not collect your information.
+                </p>  <p>
                   This Service does not use these “cookies” explicitly. However,
                   the app may use third-party code and libraries that use
                   “cookies” to collect information and improve their services.
