--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -30,7 +30,7 @@
                   configuration of the app when utilizing my Service,
                   the time and date of your use of the Service, and other
                   statistics.
-                </p> <p><strong>Camera</strong></p> <p>
+                </p> <p><strong>Camera Usage</strong></p> <p>
                     Use of front（TrueDepth API）and rear cameras:
                     Is for the purpose of measuring the distance of obstacles.
                     We will not collect your information.
