--- a/Terms.html
+++ b/Terms.html
@@ -46,7 +46,15 @@
     </p>
     <p>Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the Privacy Policy of the Company. Our Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your personal information when You use the Application or the Website and tells You about Your privacy rights and how the law protects You. Please read Our Privacy Policy carefully before using Our Service.
    </p>
-   
+        
+    <h3>Camera Usage </h3>
+    <p>
+    Use of front（TrueDepth API）and rear cameras:
+    Is for the purpose of measuring the distance of obstacles.
+    We will not collect your information.
+    </p>  
+
+        
    <h3>User Accounts </h3>
    <p>
    When You create an account with Us, You must provide Us information that is accurate, complete, and
